--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [database]
 host= localhost
-dbname = your_db_name
+dbname = crm
 ;default MySQL port
 port = 3306
-username = your_db_username
-password = your_db_password
+username = root
+password = 
 
 [server]
 ;your project folder name
