--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,9 @@
     "autoload": {
         "psr-4": {
         
-          "App\\": "src/"
-         
+          "App\\": "src/",
+          "App\\core\\": "core/"
+
    
          
         
