--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,28 @@
 {
-    "name": "projetpoire/abi",
-    "autoload": {
-        "psr-4": {
-        
-          "App\\": "src/",
-          "App\\core\\": "core/"
+  "name": "projetpoire/abi",
+  "autoload": {
+      "psr-4": {
+      
+        "App\\": "src/",
+        "App\\core\\": "core/"
 
-   
-         
-        
-        }
-    },
-    "authors": [
-        {
-            "name": "Sttayllah",
-            "email": "marielorraine.collignon@gmail.com"
-        }
-    ],
-    "require": {
-      "php": ">=8.0.2",
-      "ext-pdo": "*",
-      "symfony/var-dumper": "^6.0",
-      "filp/whoops": "^2.14",
-      "phpmailer/phpmailer": "^6.6"
-    }
+ 
+       
+      
+      }
+  },
+  "authors": [
+      {
+          "name": "Sttayllah",
+          "email": "marielorraine.collignon@gmail.com"
+      }
+  ],
+  "require": {
+    "php": ">=8.0.2",
+    "ext-pdo": "*",
+    "symfony/var-dumper": "^6.0",
+    "filp/whoops": "^2.14",
+    "phpmailer/phpmailer": "^6.6",
+    "twbs/bootstrap": "^5.1"
+  }
 }
