routes updated and ContactsController corrected

--- a/config.ini
+++ b/config.ini
@@ -2,11 +2,11 @@
 host= localhost
 dbname = crm
 ;default MySQL port
-port = 3306
+port = 8889
 username = root
-password = 
+password = root
 
 [server]
 ;your project folder name
-base_uri = /projetPoire
+base_uri = /ProjetPoire-view
 ; test
